update netgame